<resources>
    <string name="app_name">移动广财</string>
    <string name="tab_home">课表</string>
    <string name="tab_features">功能</string>
    <string name="tab_share">分享</string>    <!--分享-->
    <string name="tab_settings">我的</string>



    <string name="menu_classtable">课程表</string>
    <string name="menu_goal">查询成绩</string>
    <string name="menu_exam">考试安排/0</string>
    <string name="menu_cet">查四六级</string>
    <string name="menu_emptyClassRoom">空余课室/0</string>
    <string name="menu_searchBook">搜索图书</string>
    <string name="menu_nowBorrowedBook">当前借阅</string>
    <string name="menu_pastBorrowedBook">过去借阅</string>
    <string name="menu_lifeinformation">地图地铁</string>
    <!--<string name="menu_bus">校巴实时查询</string>-->
    <!--<string name="menu_communityinformation">社区资讯</string>-->
    <string name="menu_guardianserves">充值时间</string>
    <string name="menu_sutuo">素拓信息</string>
    <string name="menu_busandtelphone">充值时间</string>
    <string name="menu_calendar">校历</string>
    <string name="menu_refresh_classtable">更新课表</string>
    <string name="menu_notice">排课表</string>
    <string name="menu_drcom">Dr.com</string>
    <string name="menu_load_classtable_with_params">智能显示课程</string>
    <string name="menu_load_classtable_with_all">显示全部课程</string>
    <string name="menu_edusys">教务</string>
    <string name="menu_lib">图书馆</string>
    <string name="menu_card">校园卡</string>
    <string name="menu_other">小应用</string>
    <string name="menu_about">关于</string>
    <string name="menu_back">返回</string>
    <string name="title_menu">功能</string>
    <!--<string name="menu_automate_refresh">自动刷新</string>-->
    <!--<string name="menu_automate_refresh_close">关闭刷新</string>-->
    <string name="menu_exit">退出</string>
    <!--<string name="menu_gettoday">今天记录</string>-->
    <!--<string name="menu_gethistory">历史查询</string>-->
    <!--<string name="menu_add_class">+</string>-->
    <!--<string name="menu_account">账号设置</string>-->
    <!--<string name="menu_update">检查更新</string>-->
    <!--<string name="menu_configuration">软件设置</string>-->
    <!--<string name="menu_home">功能菜单</string>-->
    <!--<string name="menu_profile">个人资料</string>-->
    <!--<string name="menu_settings">软件设置</string>-->
    <!--<string name="menu_course_comments">选课评论</string>-->

    <!--查成绩-->
    <string name="listitem_label_goal">总评：</string>
    <string name="listitem_label_time">时间：</string>
    <string name="listitem_label_team">学期：</string>
    <string name="listitem_label_credit">学分：</string>
    <string name="listitem_label_grade_point">绩点：</string>
    <string name="listitem_label_classcode">课程编号：</string>
    <string name="listitem_label_score_daily">平时成绩：</string>
    <string name="listitem_label_score_paper">期末成绩：</string>
    <string name="listitem_label_score_experimental">实验成绩：</string>
    <string name="listitem_label_restudygoal">重修成绩：</string>
    <string name="tv_gpa">平均绩点：</string>
    <string name="title_grade">查询成绩</string>

    <!--素拓-->
    <string name="title_fewsztz">素拓分</string>
    <string name="listitem_label_minCredit">最低学分：</string>
    <string name="listitem_label_hasCredit">已修学分：</string>

    <!--图书馆借阅-->
    <string name="title_currentBook">当前借阅</string>
    <string name="title_borrowedBook">历史借阅</string>
    <string name="listitem_label_borrowedTime">借阅日期：</string>
    <string name="listitem_label_barId"> 条码号： </string>
    <!--<string name="listitem_label_barId"> 条码号： </string>-->
    <string name="listitem_label_returnTime">归还时间：</string>
    <string name="listitem_label_location">馆藏位置：</string>


    <!--搜索书-->
    <string name="title_searchBook">馆藏搜索</string>
    <string name="listitem_label_serial">索书号：</string>
    <string name="listitem_label_numAll">馆藏量：</string>
    <string name="listitem_label_numCan">可借：</string>
    <string name="listitem_label_publisher">出版社：</string>
    <string name="listitem_label_volume">年卷期：</string>
    <string name="listitem_label_state">书刊状态：</string>

    <!--大图页-->
    <string name="title_likeXiaoli">双指缩放</string>
    <string name="title_urgencyPhone">常用电话</string>
    <string name="title_chargeTime">充值时间</string>

    <string name="title_cet">祝你好运</string>


    <!--校园卡-->
    <string name="title_card_history">当天消费记录</string>
    <string name="listitem_label_card_cash">现有余额：</string>
    <string name="listitem_label_card_pay">交易额：</string>
    <string name="listitem_label_card_time">交易时间：</string>
    <string name="listitem_label_card_shop">商户名称：</string>

    <!--反馈页面-->
    <string name="feedback_tv_content">建议Or意见：</string>
    <string name="feedback_contact_hint">建议QQ、微信、邮箱，方便联系重现Bug</string>
    <string name="feedback_tv_contact">联系方式（可选）：</string>
    <string name="feedback_tv_submit">提交</string>

</resources>
