<?xml version="1.0" encoding="utf-8"?>
<!--书本借阅情况的详情-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:clickable="true"
        android:id="@+id/tv_search_book_store_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/socre_item_name_default_color"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:text="@string/listitem_label_serial"
        android:textColor="@color/normal_item_passed_text_color"
        android:textSize="@dimen/listitem_textSize" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/listitem_padding"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:paddingRight="@dimen/listitem_title_padding_left"
        android:paddingTop="@dimen/listitem_padding"
        android:shrinkColumns="0,2"
        android:stretchColumns="1,3">
        <TableRow>
            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_state" />
            <!-- 书刊状态 -->
            <TextView
                android:id="@+id/tv_search_book_state"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_location" />
            <!-- 馆藏位置 -->
            <TextView
                android:id="@+id/tv_search_book_location"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_barId" />
            <!-- 条码号 -->
            <TextView
                android:id="@+id/tv_search_book_store_barId"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_volume" />
            <TextView
                android:id="@+id/tv_search_book_volume"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</LinearLayout>