<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_search_book_item"
    android:clickable="true"
    android:orientation="vertical">

    <!-- 课程名称 -->
    <TextView
        android:clickable="true"

        android:id="@+id/tv_bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/socre_item_name_default_color"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:text="书名"
        android:textColor="@color/normal_item_passed_text_color"
        android:textSize="@dimen/listitem_textSize" />
    <!---->

    <TableLayout
        android:clickable="true"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/listitem_padding"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:paddingRight="@dimen/listitem_title_padding_left"
        android:paddingTop="@dimen/listitem_padding"
        android:shrinkColumns="0,2"
        android:stretchColumns="1,3">

        <TableRow>

            <TextView
                android:clickable="true"

                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_serial" />

            <!-- 借阅时间 -->
            <TextView
                android:clickable="true"

                android:id="@+id/tv_serial"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:clickable="true"

                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_numAll" />

            <TextView
                android:clickable="true"

                android:id="@+id/tv_numAll"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_numCan" />
            <!-- 可借 -->
            <TextView
                android:id="@+id/tv_numCan"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_publisher" />
            <!-- 出版社 -->
            <TextView
                android:id="@+id/tv_publisher"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>
</LinearLayout>