<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 课程名称 -->
    <TextView
        android:id="@+id/tv_book_bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/socre_item_name_default_color"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:text="书名"
        android:textColor="@color/normal_item_passed_text_color"
        android:textSize="@dimen/listitem_textSize" />
    <!---->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/listitem_padding"
        android:paddingLeft="@dimen/listitem_title_padding_left"
        android:paddingRight="@dimen/listitem_title_padding_left"
        android:paddingTop="@dimen/listitem_padding"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TextView
                android:layout_gravity="center_vertical"
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_borrowedTime" />

            <!-- 借阅时间 -->
            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_book_borrowedTime"
                style="@style/normal_item_sub_title"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/listitem_label_returnTime" />
            <!-- 归还时间 -->
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/tv_book_returnTime"
                style="@style/normal_item_sub_title"
                android:layout_height="wrap_content" />

            <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:clickable="true"-->
            <!--android:layout_height="wrap_content">-->
            <!--</RelativeLayout>-->
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="条码号码：" />
            <!-- 书ID -->
            <TextView
                android:id="@+id/tv_book_barId"
                style="@style/normal_item_sub_title"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                style="@style/normal_item_sub_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:text="@string/listitem_label_location" />
            <!-- 馆藏位置 -->
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_book_location"
                style="@style/normal_item_sub_title"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:text="续借"
                android:textSize="13sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="#74cc74"
                android:layout_gravity="right"
                android:id="@+id/tv_book_renew"/>
        </LinearLayout>
        <!--android:background="@android:color/holo_green_light"-->

    </LinearLayout>
</LinearLayout>